--- a/MvcLogicApps/Views/Shared/_Layout.cshtml
+++ b/MvcLogicApps/Views/Shared/_Layout.cshtml
@@ -27,6 +27,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-info"
                                asp-controller="LogicApps"
+                               asp-action="TablaMultiplicar">
+                                Tabla Multiplicar
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info"
+                               asp-controller="LogicApps"
                                asp-action="SendMail">
                                 Send Mail
                             </a>
