--- a/MvcLogicApps/Views/Shared/_Layout.cshtml
+++ b/MvcLogicApps/Views/Shared/_Layout.cshtml
@@ -25,6 +25,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-danger"
+                               asp-controller="LogicApps"
+                               asp-action="AnalizarComentario">
+                                Analizar comentario
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger"
+                               asp-controller="LogicApps"
+                               asp-action="Doctores">
+                                List Doctors
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-info"
                                asp-controller="LogicApps"
                                asp-action="TablaMultiplicar">
